Ensure proper wrapping on /course/management.php

--- a/scss/wwu2019/general.scss
+++ b/scss/wwu2019/general.scss
@@ -275,3 +275,9 @@ footer#wwu-footer {
         border-color: black;
     }
 }
+
+// Ensures that the two selects don't influence the width of the boxes on /course/management.php
+select#menumovecoursesto,
+select#menumovecategoriesto {
+    width: 100%;
+}
